Version 0.2.x -
----------------------------
- New: added view files
- Enh: changes in README


Version 0.1.0 - Dec 21, 2020
----------------------------
- New: package renamed into apphp/laravel-datagrid
- New: added DataGridServiceProvider


Version 0.0.1 - Dec 20, 2020 (Initial release)
----------------------------
- New: created main structure
